# gridcad

./: .gitignore  .gitmodules  Makefile  Makefile.deps  README.md  bus8.json  bustest.json  hub8.json  meson.build  meson_options.txt  png2header.py
docs/: builtin-elements.md
fonts/: Makefile
include/: buttonbar.h  canvas.h  capabilities.h  connector.h  contextmenu.h  dialog.h  document.h  element.h  gridcad.h  hexcanvas.h  iconbar.h  library.h  logger.h  model_16to8.h  model_1to4.h  model_1to8.h  model_4to1.h  model_4to8.h  model_8to1.h  model_8to16.h  model_8to4.h  model_and.h  model_buffer.h  model_clock.h  model_datascope.h  model_deflipflop.h  model_delayline.h  model_dflipflop.h  model_label.h  model_logic2.h  model_memory.h  model_nand.h  model_nest.h  model_nor.h  model_not.h  model_one.h  model_or.h  model_output.h  model_toggle.h  model_truth.h  (+13 more)
lib/: wirepath.cpp
projects/add8_test/: scene.json
projects/register8_test/: scene.json
src/: basecanvas.cpp  buttonbar.cpp  canvas.cpp  color.cpp  connector.cpp  contextmenu.cpp  dialog.cpp  document.cpp  element.cpp  event.cpp  factory.cpp  hexcanvas.cpp  iconbar.cpp  library.cpp  main.cpp  model_16to8.cpp  model_1to4.cpp  model_1to8.cpp  model_4to1.cpp  model_4to8.cpp  model_8to1.cpp  model_8to16.cpp  model_8to4.cpp  model_and.cpp  model_buffer.cpp  model_clock.cpp  model_datascope.cpp  model_deflipflop.cpp  model_delayline.cpp  model_dflipflop.cpp  model_label.cpp  model_logic2.cpp  model_memory.cpp  model_nand.cpp  model_nor.cpp  model_not.cpp  model_one.cpp  model_or.cpp  model_output.cpp  model_toggle.cpp  (+13 more)
src/nest/: model_nest.cpp
src/project/: projcanvas.cpp
src/sequencer/: model_sequencer.cpp  seqcanvas.cpp  seqcanvas.h
src/truth/: button.cpp  label.cpp  model_truth.cpp  slider.cpp  tristate.cpp  truthcanvas.cpp  truthcanvas.h  widget.cpp  widget.h
templates/alchitry_cu/: Makefile  description  scene.json
templates/alchitry_cu/verilog/: 8segbits.txt  cu.pcf
test/: wiretest.cpp
tests/: add8_test.json  register8_test.json
